--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,70 @@
-App Ready
+<td-layout>
+    <!-- <td-navigation-drawer flex sidenavTitle="Fake Umbrella" logo="" name="Firstname Lastname"
+        email="firstname.lastname@company.com">
+        <mat-nav-list>
+            <a mat-list-item>
+                <mat-icon>home</mat-icon>Home
+            </a>
+        </mat-nav-list>
+        <div td-navigation-drawer-menu>
+            <mat-nav-list>
+                <a mat-list-item>
+                    <mat-icon>account_box</mat-icon>Profile
+                </a>
+            </mat-nav-list>
+        </div>
+    </td-navigation-drawer> -->
+    <td-layout-nav logo="" toolbarTitle="Fake Umbrella">
+        <button mat-icon-button td-menu-button (click)="sidenav.toggle()">
+            <mat-icon>menu</mat-icon>
+        </button>
+        <div td-toolbar-content layout="row" layout-align="start center" flex>
+
+        </div>
+        <mat-sidenav-container fullscreen>
+            <mat-sidenav #sidenav mode="side" opened="true" style="width:257px;border-right:1px solid #ccc">
+                <div flex class="mat-content bgc-grey-50">
+                    <mat-nav-list>
+                        <a mat-list-item class="active">
+                            <mat-icon matListIcon>contacts</mat-icon>Contacts
+                        </a>
+                        <a mat-list-item>
+                            <mat-icon matListIcon>history</mat-icon>Frequently contacted
+                        </a>
+                        <a mat-list-item>
+                            <mat-icon matListIcon>business</mat-icon>Directory
+                        </a>
+                        <a mat-list-item>
+                            <mat-icon matListIcon>content_copy</mat-icon>Duplicates
+                        </a>
+                        <mat-divider></mat-divider>
+                        <a mat-list-item>
+                            <mat-icon matListIcon>add</mat-icon>Create label
+                        </a>
+                        <mat-divider></mat-divider>
+                        <a mat-list-item>
+                            <mat-icon matListIcon>settings</mat-icon>Settings
+                        </a>
+                        <a mat-list-item>
+                            <mat-icon matListIcon>announcement</mat-icon>Send feedback
+                        </a>
+                        <a mat-list-item>
+                            <mat-icon matListIcon>help</mat-icon>Help
+                        </a>
+                        <a mat-list-item>
+                            <mat-icon matListIcon>exit_to_app</mat-icon>Go to the old version
+                        </a>
+                    </mat-nav-list>
+                </div>
+            </mat-sidenav>
+            <mat-sidenav-content>
+                <router-outlet></router-outlet>
+            </mat-sidenav-content>
+        </mat-sidenav-container>
+        <td-layout-footer>
+            <div layout="row" layout-align="start center">
+                <span class="mat-caption">Copyleft &copy; 2019 Ted. All lefts reserved</span>
+            </div>
+        </td-layout-footer>
+    </td-layout-nav>
+</td-layout>
