--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,35 +25,15 @@
             <mat-sidenav #sidenav mode="side" opened="true" style="width:257px;border-right:1px solid #ccc">
                 <div flex class="mat-content bgc-grey-50">
                     <mat-nav-list>
-                        <a mat-list-item class="active">
-                            <mat-icon matListIcon>contacts</mat-icon>Contacts
-                        </a>
-                        <a mat-list-item>
-                            <mat-icon matListIcon>history</mat-icon>Frequently contacted
-                        </a>
-                        <a mat-list-item>
-                            <mat-icon matListIcon>business</mat-icon>Directory
-                        </a>
-                        <a mat-list-item>
-                            <mat-icon matListIcon>content_copy</mat-icon>Duplicates
+                        <mat-divider></mat-divider>
+                        <a routerLink="/customers" routerLinkActive="nav-router-link" mat-list-item>
+                            <mat-icon matListIcon>contacts</mat-icon>Manage Customer
                         </a>
                         <mat-divider></mat-divider>
-                        <a mat-list-item>
-                            <mat-icon matListIcon>add</mat-icon>Create label
+                        <a routerLink="/chart" routerLinkActive="nav-router-link" mat-list-item>
+                            <mat-icon matListIcon>bar_chart</mat-icon>Chart
                         </a>
                         <mat-divider></mat-divider>
-                        <a mat-list-item>
-                            <mat-icon matListIcon>settings</mat-icon>Settings
-                        </a>
-                        <a mat-list-item>
-                            <mat-icon matListIcon>announcement</mat-icon>Send feedback
-                        </a>
-                        <a mat-list-item>
-                            <mat-icon matListIcon>help</mat-icon>Help
-                        </a>
-                        <a mat-list-item>
-                            <mat-icon matListIcon>exit_to_app</mat-icon>Go to the old version
-                        </a>
                     </mat-nav-list>
                 </div>
             </mat-sidenav>
