--- a/src/app/customer/customer-list/customer-list.component.html
+++ b/src/app/customer/customer-list/customer-list.component.html
@@ -1,1 +1,3 @@
-<p>customer-list works!</p>
+<td-data-table [data]="customersList" [columns]="columns" [selectable]="true" [multiple]="multiple" [sortable]="true">
+
+</td-data-table>
