--- a/src/app/customer/customer-list/customer-list.component.html
+++ b/src/app/customer/customer-list/customer-list.component.html
@@ -1,3 +1,3 @@
-<td-data-table [data]="customersList" [columns]="columns" [selectable]="true" [multiple]="multiple" [sortable]="true">
+<td-data-table #customerTable [data]="customersList" [columns]="columns" [selectable]="true" [multiple]="multiple" [sortable]="true">
 
 </td-data-table>
