--- a/src/app/customer/customer-list/customer-list.component.scss
+++ b/src/app/customer/customer-list/customer-list.component.scss
@@ -3,14 +3,18 @@
 :host ::ng-deep {
     td-data-table {
         border: 1px solid black !important;
-
     }
 
     .td-data-table-head {
         background-color: $comfort-eye;
 
-        .td-data-table-column {
-            font-size: 14px !important;
+        .td-data-table-column-row {
+            border-bottom-width: 0 !important;
+
+            .td-data-table-column {
+                border-right: 1px solid black;
+                font-size: 14px !important;
+            }
         }
     }
 }
