--- a/src/app/customer/add-or-edit-customer/add-or-edit-customer.component.html
+++ b/src/app/customer/add-or-edit-customer/add-or-edit-customer.component.html
@@ -2,26 +2,26 @@
     {{getTitle()}}
 </h1>
 <div fxLayout="column" mat-dialog-content class="container">
-    <form fxLayout="column" [formGroup]="customerForm">
-        <mat-form-field fxFlex>
-            <input matInput placeholder="Name" FormControlName="name">
+    <form fxLayout="column" fxLayoutGap="10px" [formGroup]="customerForm">
+        <mat-form-field color="accent" fxFlex>
+            <input matInput placeholder="Name" formControlName="name">
         </mat-form-field>
-        <mat-form-field fxFlex>
-            <input matInput placeholder="Location" FormControlName="location">
-            <mat-error *ngIf="location.invalid">{{getLocationErrorMsg()}}</mat-error>
+        <mat-form-field color="accent" fxFlex>
+            <input matInput placeholder="Location" formControlName="location">
+            <mat-error *ngIf="customerForm.get('location').invalid">{{getLocationErrorMsg()}}</mat-error>
         </mat-form-field>
-        <mat-form-field fxFlex>
-            <input matInput placeholder="Telephone Number" FormControlName="telephone">
+        <mat-form-field color="accent" fxFlex>
+            <input matInput placeholder="Telephone Number" formControlName="telephone">
         </mat-form-field>
-        <mat-form-field fxFlex>
-            <input matInput placeholder="Person Of Contact" FormControlName="personOfContact">
+        <mat-form-field color="accent" fxFlex>
+            <input matInput placeholder="Person Of Contact" formControlName="personOfContact">
         </mat-form-field>
-        <mat-form-field fxFlex>
-            <input matInput placeholder="Number Of Employees" FormControlName="numberOfEmployees">
+        <mat-form-field color="accent" fxFlex>
+            <input matInput placeholder="Number Of Employees" formControlName="numberOfEmployees">
         </mat-form-field>
     </form>
     <div fxFlex fxLayoutGap="20px" fxLayoutAlign="center center">
-        <button mat-button (click)="save()" disabled="disableSave()">
+        <button mat-button (click)="save()" [disabled]="customerForm.invalid">
             Save
         </button>
         <button mat-button (click)="cancel()">
