add report module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,6 +30,10 @@
                             <mat-icon matListIcon>contacts</mat-icon>Manage Customer
                         </a>
                         <mat-divider></mat-divider>
+                        <a routerLink="/report" routerLinkActive="nav-router-link" mat-list-item>
+                            <mat-icon matListIcon>report</mat-icon>Report
+                        </a>
+                        <mat-divider></mat-divider>
                         <a routerLink="/chart" routerLinkActive="nav-router-link" mat-list-item>
                             <mat-icon matListIcon>bar_chart</mat-icon>Chart
                         </a>
